<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:background="@color/background"
            android:contentDescription="@string/overview"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/CardViewTheme"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginTop="@dimen/poster_margin_top_offset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_banner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_extra_small">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/overview"
                    android:scaleType="centerCrop" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextView.ExtraBigBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/img_banner"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextView.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
            tools:text="@string/lorem_ipsum" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/margin_big"
                android:layout_height="@dimen/margin_big"
                android:contentDescription="@string/overview"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/rating" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_original_language_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/original_language"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFaforite"
            style="@style/CardViewFavorite"
            android:layout_width="@dimen/margin_multi_extra_big"
            android:layout_height="@dimen/margin_multi_extra_big"
            android:layout_marginTop="@dimen/favorite_margin_top_offset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/img_banner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/margin_extra_small">

                <com.varunest.sparkbutton.SparkButton
                    android:id="@+id/spark_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:sparkbutton_activeImage="@drawable/ic_favorite_on"
                    app:sparkbutton_inActiveImage="@drawable/ic_favorite_off"
                    app:sparkbutton_primaryColor="@color/primaryColor"
                    app:sparkbutton_secondaryColor="@color/secondaryColor" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/tv_overview_title"
            style="@style/TextView.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>